--- a/css/bazaarvoiceUniversal.css
+++ b/css/bazaarvoiceUniversal.css
@@ -88,7 +88,7 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 
 		._BVHistogramIndividualContainer {margin-bottom: 10px;}
 		._BVHistogramIndividualContainer:after {content: "."; height: 0; width: 0; visibility: hidden; display: block; clear: both;}
-			._BVHistogramIndividualWrapper {width: 80px; height: 14px; display: block; float: left; margin-right: 10px; background: url(images/histogramBar.png);}
+			._BVHistogramIndividualWrapper {width: 80px; height: 14px; margin-top: 2px; display: block; float: left; margin-right: 10px; background: url(images/histogramBar.png);}
 				._BVHistogramIndividual {height: 14px; display: block; float: left; background: url(images/histogramBar.png) 0 -14px;}
 
 
@@ -132,6 +132,7 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 						._BVFilterCountText, .BVFilterCountTextPrefix, .BVFilterCountTextSuffix {font-size: 11px; color: #737474;}
 						.BVFilterTextSuffix {display: none;}
 						._BVFilterText, .BVFilterCountTextPrefix {float: left;}
+							._BVFilterText span {width: 45px; display: block;}
 					.BVFiltersFilteringStatement {font-size: 9px;}
 		
 		/* Write a Review & Sorting */
