--- a/css/bazaarvoiceUniversal.css
+++ b/css/bazaarvoiceUniversal.css
@@ -54,6 +54,7 @@ behavior: url(includes/PIE-1.0.0/PIE.htc);
 
 	/* Filled & Unfilled Images - SVG scaling */
 	._BVRatingStarsFilledImage, ._BVRatingStarsUnfilledImage {width: 100%; height: auto;}
+	.ie .BVSecondaryRatingContainer ._BVRatingStarsFilledImage, .ie .BVSecondaryRatingContainer ._BVRatingStarsUnfilledImage {height: 11px;}
 	.webkit ._BVRatingStarsFilledImage, .webkit ._BVRatingStarsUnfilledImage {width: auto;}
 
 	/* Overall Star Rating */
