--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -297,6 +297,15 @@
 	</div>
 </script>
 
+<!-- default button template -->
+<script id="bvtemplate-button-close-universal" type="html">
+	<div id="" class="BVButtonWrapper BVButtonCloseWrapper">
+		<a id="" class="_BVButton BVButtonClose" title="" name="" onclick="" href="">
+			<span id="" class="_BVButtonText"></span>
+		</a>
+	</div>
+</script>
+
 <!-- ********** HEADERS ********** -->
 
 <!-- GENERAL -->
@@ -349,7 +358,7 @@
 <!-- feedback status template -->
 <script id="bvtemplate-feedback-status-message-universal" type="html">
 	<div class="BVStatusMessageWrapper">
-		<div class="_BVButtonCloseContainer"></div>
+		<div class="_BVButtonGenericContainer"></div>
 		<div class="_BVStatusMessageText"></div>
 	</div>
 </script>
@@ -787,7 +796,7 @@
 <script id="bvtemplate-input-upload-preview-universal" type="html">
 	<div class="BVPhotoUploadPreviewWrapper">
 		<div class="_BVPhotoGroupContainer"></div>
-		<div class="_BVButtonCloseContainer"></div>
+		<div class="_BVButtonGenericContainer"></div>
 		<div class="_BVFormInputWrapper _BVPhotoCaptionInputWrapper"></div>
 		<div class="_BVFormInputWrapper _BVPhotoUrlInputWrapper"></div>
 	</div>
