--- a/views/viewsUniversal.html
+++ b/views/viewsUniversal.html
@@ -111,7 +111,27 @@
 	</div>
 </script>
 
+<!-- ********** PRIMARY SUMMARY ********** -->
+
+<!-- PRIMARY SUMMARY -->
+
+<!-- universal primary summary template -->
+<script id="bvtemplate-primary-summary-universal" type="html">
+	<div class="_BVPrimarySummaryContainer">
+		<div class="_BVOverallRatingContainer"></div>
+		<div class="_BVHistorgramWidgetContainer"></div>
+		<div class="_BVRecommendedContainerAverage"></div>
+		<div class="_BVButtonWriteReviewContainer"></div>
+		<div class="_BVButtonReadReviewsContainer"></div>
+		<div class="BVSortContainer">
+			<div class="_BVSortInputWrapper"></div>
+		</div>
+	</div>
+</script>
+
+
 <!-- ********** QUICK TAKE ********** -->
+
 
 <!-- QUICK TAKE -->
 
@@ -289,8 +309,35 @@
 <!-- GENERAL -->
 
 <!-- default button template -->
-<script id="bvtemplate-button-default-universal" type="html">
-	<div id="" class="BVButtonWrapper">
+<script id="bvtemplate-button-primary-default-universal" type="html">
+	<div id="" class="BVButtonWrapper BVPrimaryButtonWrapper">
+		<a id="" class="_BVButton" title="" name="" onclick="" href="">
+			<span id="" class="_BVButtonText"></span>
+		</a>
+	</div>
+</script>
+
+<!-- default button template -->
+<script id="bvtemplate-button-secondary-default-universal" type="html">
+	<div id="" class="BVButtonWrapper BVSecondaryButtonWrapper">
+		<a id="" class="_BVButton" title="" name="" onclick="" href="">
+			<span id="" class="_BVButtonText"></span>
+		</a>
+	</div>
+</script>
+
+<!-- default button template -->
+<script id="bvtemplate-button-tertiary-default-universal" type="html">
+	<div id="" class="BVButtonWrapper BVTertiaryButtonWrapper">
+		<a id="" class="_BVButton" title="" name="" onclick="" href="">
+			<span id="" class="_BVButtonText"></span>
+		</a>
+	</div>
+</script>
+
+<!-- default text button template -->
+<script id="bvtemplate-button-text-default-universal" type="html">
+	<div id="" class="BVButtonWrapper BVTextButtonWrapper">
 		<a id="" class="_BVButton" title="" name="" onclick="" href="">
 			<span id="" class="_BVButtonText"></span>
 		</a>
@@ -299,8 +346,17 @@
 
 <!-- default button template -->
 <script id="bvtemplate-button-close-universal" type="html">
-	<div id="" class="BVButtonWrapper BVButtonCloseWrapper">
+	<div id="" class="BVButtonWrapper BVCloseButtonWrapper">
 		<a id="" class="_BVButton BVButtonClose" title="" name="" onclick="" href="">
+			<span id="" class="_BVButtonText"></span>
+		</a>
+	</div>
+</script>
+
+<!-- default button template -->
+<script id="bvtemplate-button-default-universal" type="html">
+	<div id="" class="BVButtonWrapper BVDefaultButtonWrapper">
+		<a id="" class="_BVButton" title="" name="" onclick="" href="">
 			<span id="" class="_BVButtonText"></span>
 		</a>
 	</div>
